[gd_scene load_steps=5 format=2]

[ext_resource path="res://Menus/Game_Controller/Game_Controller.gd" type="Script" id=1]
[ext_resource path="res://HUD/Player_Status/Player_Status.tscn" type="PackedScene" id=2]
[ext_resource path="res://Entities/Hero/Hero.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[node name="Game_Controller" type="Node2D"]
script = ExtResource( 1 )

[node name="Room_Transition" type="Node" parent="."]

[node name="change_timer" type="Timer" parent="Room_Transition"]
process_mode = 0
wait_time = 0.4
one_shot = true

[node name="Tween" type="Tween" parent="Room_Transition"]

[node name="Blackout" type="Panel" parent="Room_Transition"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Screen" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="Screen"]
size = Vector2( 1024, 600 )
own_world = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Room" type="Node2D" parent="Screen/Viewport"]

[node name="Hero" parent="Screen/Viewport" instance=ExtResource( 3 )]

[node name="Camera" type="Camera2D" parent="Screen/Viewport/Hero"]
current = true
limit_left = 0
limit_top = 0

[node name="Player_Status" parent="." instance=ExtResource( 2 )]
margin_left = 10.0
margin_top = 10.0
margin_right = 110.0
margin_bottom = 62.0
Character = NodePath("../Screen/Viewport/Hero")
[connection signal="timeout" from="Room_Transition/change_timer" to="." method="_on_change_timer_timeout"]
[connection signal="tween_all_completed" from="Room_Transition/Tween" to="." method="_on_Tween_tween_all_completed"]
